--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,9 @@ body {
 }
 
 #salary-head h1 {
-    font-size: 1.5em;
+    font-size: 2em;
     font-weight: 600;
-    line-height: .5em;
+    line-height: .7em;
 }
 
 #content {
@@ -49,7 +49,7 @@ body {
 #total {
     width: auto;
     height: 130px;
-    font-size: 1.4em;
+    font-size: 1.8em;
     text-align: center;
     line-height: 130px;
     background: url("../img/total-bg.png") no-repeat center center;
@@ -60,7 +60,7 @@ body {
 #yesterday-income, #delay-income {
     width: 50%;
     height: 100px;
-    font-size: 1.3em;
+    font-size: 1.5em;
     text-align: center;
     line-height: 30px;
     background: -moz-linear-gradient(top, #12AAF3, #00CBFf);
@@ -68,11 +68,16 @@ body {
     background: -webkit-gradient(linear, 0 0, 0 100%, from(#12AAF3), to(#00CBFf));
 }
 
+#yesterday-income p,
+#delay-income p {
+    padding: 15px;
+}
+
 #content a {
     border: none;
     border-bottom: 1px solid #d0d0d0;
     text-align: left;
-    font-size: 1.5em;
+    font-size: 1.7em;
     text-indent: 1em;
     font-weight: 600;
 }
